# iot-guides

./: .gitignore  README.md
matter-thermal-mesh/: .gitignore  SETUP-GUIDE.md  ULTIMATE-PROJECT-PLAN.md
matter-thermal-mesh/dashboard/: index.html  sensor-placement.html
matter-thermal-mesh/dashboard/backend/: app.py  config.yaml  data_store.py  mesh_monitor.py  requirements.txt
matter-thermal-mesh/docs/: PROJECT-HISTORY.md  WIRING-DIAGRAMS.md
matter-thermal-mesh/docs/diagrams/: system-architecture.mmd  wiring-nano-matter.mmd  wiring-sparkfun1.mmd  wiring-sparkfun2.mmd
matter-thermal-mesh/docs/images/: IMAGE-GUIDE.md
matter-thermal-mesh/firmware/board-test/: board-test.ino
matter-thermal-mesh/firmware/common/: grid_eye.cpp  grid_eye.h  thermal_processor.cpp  thermal_processor.h
matter-thermal-mesh/firmware/factory-reset/: factory-reset.ino
matter-thermal-mesh/firmware/i2c-probe/: i2c-probe.ino
matter-thermal-mesh/guides/: TEMPLATE.md
matter-thermal-mesh/rpi-config/: docker-compose.yml  heatmap-dashboard.service  kiosk-autostart.sh  setup-kiosk.sh
matter-thermal-mesh/scripts/: flash-rcp.md  setup-rpi.sh  test-i2c.py
nano-matter-ide-vs-zephyr/: .gitignore  README.md
nano-matter-ide-vs-zephyr/docs/: SETUP-GUIDE.md  serial-capture-evidence.md
nano-matter-ide-vs-zephyr/firmware/zephyr/led-sensor/: CMakeLists.txt  prj.conf
nano-matter-ide-vs-zephyr/firmware/zephyr/led-sensor/boards/: arduino_nano_matter.conf  arduino_nano_matter.overlay  siwx917_dk2605a.conf  siwx917_dk2605a.overlay
nano-matter-ide-vs-zephyr/firmware/zephyr/led-sensor/src/: main.c
(+50 files in other folders)
